--- a/css/ubi.css
+++ b/css/ubi.css
@@ -1126,3 +1126,57 @@ a{
     height: 3px;
     background: #666;
 }
+.more_games_row_2{
+    top: 290px !important;
+}
+.more_games_container{
+    height: 290px;
+    width: 11946px;
+    left:0;
+    top:0;
+    position:absolute;
+    display:flex;
+}
+.more_games{
+    width: 100%;
+    height: 580px;
+    transition: all .6s cubic-bezier(.3,.8,.1,.95);
+    overflow:hidden;
+    position:relative;
+    cursor:pointer;
+}
+.game_box{
+    margin: 18px;
+    width:266px;
+    height: 220px;
+    padding:0 0 12px 0;
+    box-shadow: 0 0 50px rgba(0,0,0,0.2);
+    display: block;
+    align-items: flex-start;
+    flex-direction: column;
+}
+.game_box_img_container{
+    width:266px;
+    height:150px;
+    overflow: hidden;
+}
+.game_box_img_container>img:hover{
+    transform: scale(1.05,1.05);
+}
+.game_box_img_container>img{
+    width:266px;
+    height:150px;
+    object-fit: cover;
+    transition: all .6s cubic-bezier(.3,.8,.1,.95);
+}
+.game_box_name {
+    margin: 9px 3px 6px 9px;
+}
+.game_box_description{
+    margin: 3px 3px 6px 9px;
+    font-size: 10px;
+    font-family: Georgia,Times,Times New Roman,serif;
+    font-style: italic;
+    color: #5a5a5a;
+    -webkit-font-smoothing: antialiased;
+}
