--- a/css/ubi.css
+++ b/css/ubi.css
@@ -565,8 +565,8 @@ a{
 .inside_item_active .inside_img_container:after , .trending_item_active .trending_img_container:after{
     content:"";
     display: block;
-    position: relative;
-    margin-top: -45vh;
+    position: absolute;
+    top:0;
     height: 100%;
     background: linear-gradient(180deg,transparent 0,rgba(0,0,0,.6) 80%);
     width: 100%;
